--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "concurrently": "^9.2.1",
+    "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "electron-builder": "^26.0.12",
@@ -59,6 +60,7 @@
     "prisma": "^6.11.1",
     "qrcode": "^1.5.4",
     "react": "18.3.1",
+    "react-day-picker": "^9.11.0",
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.5.2",
     "recharts": "^3.0.2",
